--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: Vazir;
-  src: url("../public/fonts/Vazir-Medium-FD-WOL.ttf");
+  src: url("/fonts/Vazir-Medium-FD-WOL.ttf");
 }
 
 body {
